# omnitrix

./: Cargo.toml  README.md
hooking/: Cargo.toml
hooking/src/: fivebyteshooking.rs  iathooking.rs  lib.rs  utils.rs
hooking/src/peparser/: mod.rs
reflection/: Cargo.toml
reflection/src/: lib.rs  utils.rs
reflection/src/peparser/: mod.rs
rustdbg64/: Cargo.toml
rustdbg64/src/: main.rs  utils.rs
rustdbg64/src/debugger/: debug_event_handlers.rs  mod.rs
rustdbg64/src/peparser/: mod.rs
rustdbg64/src/process_manager/: enumeration.rs  flags.rs  mod.rs
src/: main.rs  os.rs  utils.rs
src/injectionmanager/: mod.rs  remoteinjection.rs  selfinjection.rs
src/pipemanager/: pipes.rs
src/processmanager/: enumeration.rs  mod.rs
src/registrymanager/: mod.rs
src/servicemanager/: enumeration.rs
src/sharemanager/: enumeration.rs
src/tokenmanager/: enumeration.rs  mod.rs  sids.rs  tokens.rs
