[package]
name = "omnitrix"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
embed-resource = "3.0.1"
litcrypt = "0.3.0"
md5 = "0.7.0"
ntapi = "0.4.1"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }

winapi = { version = "0.3.9", features = ["accctrl", "errhandlingapi", "fileapi", "handleapi", "heapapi", "libloaderapi", "lmapibuf", "lmcons", "lmshare", "memoryapi", "minwindef", "namedpipeapi", "ntdef", "ntlsa", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "tlhelp32", "winbase", "winerror", "winnt", "winreg", "winsvc", "winuser"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
base64 = "0.13.1"
#tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
#tokio-compat-02 = "0.2"
