[package]
name = "hooking"
version = "0.1.0"
edition = "2021"

[dependencies]

winapi = { version = "0.3.9", features = ["accctrl", "errhandlingapi", "fileapi", "handleapi", "libloaderapi", "lmapibuf", "lmcons", "lmshare", "memoryapi", "minwindef", "namedpipeapi", "ntdef", "ntlsa", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "tlhelp32", "winbase", "winerror", "winnt", "winsvc", "winuser", "ntstatus"] }
ntapi = "0.4.1"
once_cell = "1.20.2"


[lib]
crate-type = ["cdylib"]
